deployment-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
  labels:
    app: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: bludit
          image: chan43999/hello-world:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
