service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-world
spec:
  type: NodePort
  selector:
    app: hello-world
  ports:
    - name: hello-world
      protocol: TCP
      port: 8080
      targetPort: 8080
