ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  backend:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: hello-world
              servicePort: 8080
